--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.2.2",
     "react-scripts": "4.0.3",
+    "uniqid": "^5.4.0",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
